# full-service-mirror

./: .gitignore  .gitmodules  .mobconf  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  docker-compose.yaml  example-client.js  mob  package.json  rust-toolchain
.github/workflows/: README.md  build.yaml  ci.yml  deploy.yaml  tag.yaml
.github/workflows/helpers/: values_template_mainnet.yaml  values_template_testnet.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  full-service-service.yaml  full-service-statefulset.yaml  ledger-validator-certificate.yaml  ledger-validator-service.yaml  ledger-validator-statefulset.yaml  mirror-private-deployment.yaml  mirror-public-certificate.yaml  mirror-public-deployment.yaml  mirror-public-service.yaml
create-release/: README.md  create-release-mainnet.sh  create-release-testnet.sh  create-release.sh
create-release/package/: README.md  mirror.key  mobilecoind-mirror-private-tls-encrypted.sh  mobilecoind-mirror-private-tls.sh  mobilecoind-mirror-private.sh  mobilecoind-mirror-public-tls.sh  mobilecoind-mirror-public.sh  wallet-service-mirror-private-tls-encrypted.sh  wallet-service-mirror-private-tls.sh  wallet-service-mirror-private.sh  wallet-service-mirror-public-tls.sh
create-release/package-mainnet/: README.md  example-client.js  wallet-service-mirror-private-tls-encrypted.sh  wallet-service-mirror-private-tls.sh  wallet-service-mirror-private.sh  wallet-service-mirror-public.sh
create-release/package-testnet/: README.md  example-client.js  mirror.crt  wallet-service-mirror-private-tls-encrypted.sh  wallet-service-mirror-private-tls.sh  wallet-service-mirror-private.sh  wallet-service-mirror-public-tls.sh
proto/: mobilecoind_mirror_api.proto  wallet_service_mirror_api.proto
src/: lib.rs  uri.rs
src/generate-rsa-keypair/: main.rs
src/private/: crypto.rs  main.rs  request.rs
src/public/: main.rs  mirror_service.rs  query.rs  utils.rs
test/: Dockerfile  package-lock.json  package.json  run.sh
test/test_lib/: package.json  send-request-encrypted.js
test/test_suite/: Dockerfile  package-lock.json  package.json  run.sh  test_script.js
tools/release/: build-mobilecoind-release.sh
tools/release-tests/: assert.sh  mirror-integration-test.sh
