[package]
name = "mc-wallet-service-mirror"
version = "0.6.0-pre1"
authors = ["MobileCoin"]
edition = "2018"
resolver = "2"

[[bin]]
name = "wallet-service-mirror-private"
path = "src/private/main.rs"

[[bin]]
name = "wallet-service-mirror-public"
path = "src/public/main.rs"

[[bin]]
name = "generate-rsa-keypair"
path = "src/generate-rsa-keypair/main.rs"

[dependencies]
mc-api = { path = "full-service/mobilecoin/api" }
mc-common = { path = "full-service/mobilecoin/common", features = ["loggers"] }
mc-util-grpc = { path = "full-service/mobilecoin/util/grpc" }
mc-util-uri = { path = "full-service/mobilecoin/util/uri" }

boring = "2.0"
futures = "0.3"
generic-array = "0.12"
grpcio = "0.10.3"
hex = "0.4"
protobuf = "2.12"
rand = "0.8"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "gzip", "blocking"] }
rocket = { version = "0.4.5", default-features = false }
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"


[dev-dependencies]
rand_hc = "0.3"
rand_core = { version = "0.6", default-features = false }


[build-dependencies]
# Even though this is unused, it needs to be here otherwise Cargo brings in some weird mixture of packages/features that refuses to compile.
# Go figure ¯\_(ツ)_/¯
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }

mc-util-build-grpc = { path = "full-service/mobilecoin/util/build/grpc" }
mc-util-build-script = { path = "full-service/mobilecoin/util/build/script" }

cargo-emit = "0.1.1"

[patch.crates-io]

# Fork and rename to use "OG" dalek-cryptography.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "65f8af4ca0bc1cb2fd2148c3259a0a76b155ff3e" }

# This version contains iOS build fixes
cmake = { git = "https://github.com/alexcrichton/cmake-rs", rev = "5f89f90ee5d7789832963bffdb2dcb5939e6199c" }

# Fix issues with recent nightlies, bump curve25519-dalek version
curve25519-dalek = { git = "https://github.com/mobilecoinfoundation/curve25519-dalek.git", rev = "8791722e0273762552c9a056eaccb7df6baf44d7" }
ed25519-dalek = { git = "https://github.com/mobilecoinfoundation/ed25519-dalek.git", rev = "4194e36abc75722e6fba7d552e719448fc38c51f" }


# packed_simd_2 has unreleased fixes for build issues we're experiencing
packed_simd_2 = { git = "https://github.com/rust-lang/packed_simd.git", rev = "f60e900f4ceb71303baa37ff8b41ee7d490c01bf" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "5c98ae068ee4652d6df6463b549fbf2d5d132faa" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "c1966b8743d320cd07a54191475e5c0f94b2ea30" }
